[package]
name = "rust_sqlite_file_redis"
version = "0.1.0"
edition = "2021"
default-run = "rust_sqlite_file_redis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rusqlite = "0.28.0"

[[bin]]
name = "rust_sqlite_file_redis"
path = "src/main.rs"

[[bin]]
name = "prepare-tree"
path = "src/bin/prepare-tree.rs"
bench = false

[[bin]]
name = "prepare-file"
path = "src/bin/prepare-file.rs"
bench = false

[[bin]]
name = "prepare-bin"
path = "src/bin/prepare-bin.rs"
bench = false

[[bin]]
name = "prepare-sqlite"
path = "src/bin/prepare-sqlite.rs"
bench = false

[[example]]
name = "rs1" # examples/boolean.rs

[profile.release]
debug = true
